# ProPrompt-AI

./: .gitignore  README.md  mytool.py  propromptai.py  pyproject.toml
ai_project_1/: ai_engine.py  ai_handler.py  app.py  data_prep.py  detector.py  evaluator.py  main.py  metrics.py  model_engine.py  processor.py  requirements.txt
ai_project_1/ai_project_1/: app.py  processor.py  requirements.txt
madurai_clean_ai/: app.py  db.py
